--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use-firework",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "description": "a react hooks for firework animation",
   "main": "cjs/index.js",
   "module": "es/index.js",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/uyarn/use-firework.git"
+    "url": "git+https://github.com/uyarn/react-use-firework.git"
   },
   "files": [
     "cjs",
