--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use-firework",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "a react hooks for firework animation",
   "main": "cjs/index.js",
   "module": "es/index.js",
@@ -30,7 +30,7 @@
     "react",
     "animation"
   ],
-  "author": "uyarnchen",
+  "author": "uyarn",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/uyarn/use-firework/issues"
@@ -60,7 +60,7 @@
     "typescript": "^4.4.2"
   },
   "peerDependencies": {
-    "react": ">=^16.9.0",
-    "react-dom": "^16.9.0"
+    "react": ">=16.9.0",
+    "react-dom": ">=16.9.0"
   }
 }
